--- a/Module_1/index.html
+++ b/Module_1/index.html
@@ -5,6 +5,16 @@
     <title>Hey jp</title>
   </head>
   <body>
-    <h1> Hey jp</h1>
+    <div> 
+  <input type="text">
+</div>
+
+    <div> 
+  <button> Submit </button>
+</div>
+
+<div id="display_message"> 
+</div>
+
   </body>
 </html>
