--- a/Module_1/index.html
+++ b/Module_1/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hey jp</title>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>    
+<title>Hey jp</title>
   </head>
-  <body>
+  <body ng-app="LunchCheck">
     <div> 
   <input type="text">
 </div>
@@ -15,6 +16,8 @@
 
 <div id="display_message"> 
 </div>
+<script>
 
+</script>
   </body>
 </html>
