--- a/Module_1/index.html
+++ b/Module_1/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>    
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>  
+    <script src="app.js"></script>
 <title>Hey jp</title>
   </head>
   <body ng-app="LunchCheck">
