--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </div>
 
     <div>
-  <button ng-click="checkLunch()"> Check if too much </button>
+  <button ng-click="checkitems()"> Check if too much </button>
 </div>
 
 <div id="display_message">{{message}}
