--- a/Module_2/index.html
+++ b/Module_2/index.html
@@ -3,24 +3,7 @@
   <head>
     <title>Shopping List Check Off</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <style>
-      .emptyMessage {
-        font-weight: bold;
-        color: red;
-        font-size: 1.2em;
-      }
-      li {
-        margin-bottom: 7px;
-        font-size: 1.2em;
-      }
-      li > button {
-        margin-left: 6px;
-      }
-      button > span {
-        color: green;
-      }
-    </style>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">  
   </head>
 <body>
   <div class="container">
@@ -35,16 +18,16 @@
        <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
        <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
      </ul>
-     <div class="emptyMessage">Everything is bought!</div>
+     <div>Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
-    <div class="col-md-6">
+    <div >
      <h2>Already Bought:</h2>
      <ul>
        <li>Bought 10 cookies</li>
      </ul>
-     <div class="emptyMessage">Nothing bought yet.</div>
+     <div>Nothing bought yet.</div>
     </div>
   </div>
 </div>
