--- a/Module_2/index.html
+++ b/Module_2/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">  
   </head>
-<body>
+<body ng-app="ShoppingListCheckOff">
   <div class="container">
   <h1>Shopping List Check Off</h1>
 
@@ -31,6 +31,7 @@
     </div>
   </div>
 </div>
-
+<script src="Module_2/angular.min.js"></script>
+  <script src="Module_2/app.js"></script>
 </body>
 </html>
