--- a/Module_2/index.html
+++ b/Module_2/index.html
@@ -5,32 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">  
   </head>
-<body ng-app="ShoppingListCheckOff">
+<body ng-app="ShoppingListCheck">
   <div class="container">
   <h1>Shopping List Check Off</h1>
 
-  <div class="row">
+  <div class="container">
+    <h1>Shopping List Check Off</h1>
+    <div class="row">
+      <!-- To Buy List -->
+      <div class="col-md-6" ng-controller='toBuyController as buy'>
+        <h2>To Buy:</h2>
+        <ul>
+          <li ng-repeat="item in buy.items">
+            Buy {{ item.quantity }} {{ item.name }}
+            <button ng-click="buy.buyItem($index);" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button>
+          </li>
+        </ul>
+        <div ng-if="buy.items.length == 0" class="emptyMessage">Everything is bought!</div>
+      </div>
 
-    <!-- To Buy List -->
-    <div class="col-md-6">
-     <h2>To Buy:</h2>
-     <ul>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-     </ul>
-     <div>Everything is bought!</div>
-    </div>
-
-    <!-- Already Bought List -->
-    <div >
-     <h2>Already Bought:</h2>
-     <ul>
-       <li>Bought 10 cookies</li>
-     </ul>
-     <div>Nothing bought yet.</div>
+      <!-- Already Bought List -->
+      <div class="col-md-6" ng-controller='alreadyBoughtController as bought'>
+        <h2>Already Bought:</h2>
+        <ul>
+          <li ng-repeat="item in bought.items">
+            Bought {{ item.quantity }} {{ item.name }}
+          </li>
+        </ul>
+        <div ng-if="bought.items.length == 0" class="emptyMessage">Nothing bought yet.</div>
+      </div>
     </div>
   </div>
-</div>
 <script src="Module_2/angular.min.js"></script>
   <script src="Module_2/app.js"></script>
 </body>
