--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-<script src="angular_practice/angular.min.js"></script>
-  <script src="angular_practice/Module_2/app.js"></script>
+<script src="angular.min.js"></script>
+  <script src="Module_2/app.js"></script>
 </body>
 </html>
