--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">  
   </head>
 <body ng-app="ShoppingListCheck">
+  
   <div class="container">
   <h1>Shopping List Check Off</h1>
 
@@ -37,6 +38,6 @@
     </div>
   </div>
 <script src="angular.min.js"></script>
-  <script src="Module_2/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
