--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">  
   </head>
 <body ng-app="ShoppingListCheck">
-  
+  <script src="angular.min.js"></script>
+  <script src="app.js"></script>
   <div class="container">
   <h1>Shopping List Check Off</h1>
    
