--- a/Module_2/index.html
+++ b/Module_2/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">  
   </head>
 <body ng-app="ShoppingListCheck">
+  <script src="angular.min.js"></script>
+  <script src="app.js"></script>
   <div class="container">
   <h1>Shopping List Check Off</h1>
-
-  <div class="container">
-    <h1>Shopping List Check Off</h1>
+   
     <div class="row">
       <!-- To Buy List -->
       <div class="col-md-6" ng-controller='toBuyController as buy'>
@@ -35,8 +35,8 @@
         <div ng-if="bought.items.length == 0" class="emptyMessage">Nothing bought yet.</div>
       </div>
     </div>
-  </div>
-<script src="Module_2/angular.min.js"></script>
-  <script src="Module_2/app.js"></script>
+  
+<script src="angular.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
